syntax = "proto2";


package advantage.protos;


message ExperienceReplayBuffer {

}
