syntax = "proto2";

package advantage.protos;

import "advantage/protos/buffers/buffers.proto";
import "advantage/protos/elements/sarsa.proto";

message DeepQModel {

    required Buffers buffer = 3;

    required Sarsa sarsa = 4;

    required int64 improve_target_modulo = 5;
    required int64 iterations_of_improvement = 6;

    required int64 batch_size = 7;

    required bool train_sample_less = 8 [default=false];
}
